Fixed TP validation for transaction creation.
+ Added simplifyObject representations.
